[package]
name = "claude-light"
version = "0.1.0"
description = "Traffic-light desktop widget showing Claude Code activity status"
authors = ["you"]
edition = "2021"

[lib]
name = "claude_light_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
